# ot-harjoitustyo

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: arkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: board.py  clock.py  config.py  game_loop.py  main.py  move.py  renderer.py  square.py
src/sprites/: square.py
src/tests/: board_test.py  square_test.py
